--- a/latex/seminararbeit.tex
+++ b/latex/seminararbeit.tex
@@ -77,6 +77,8 @@
 % for a glossary
 \usepackage[toc]{glossaries}
 \input{glossary}
+% caption* for unnumbered captions
+\usepackage{caption}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Titel, Autor, Seminar, Semester, Dozent %
@@ -93,6 +95,13 @@
 % OTHER SETTINGS:
 % \setlength{\parindent}{0in}
 \renewcommand{\arraystretch}{1.5}
+
+% add listoflistings to the toc
+\renewcommand{\listoflistings}{
+  \cleardoublepage
+  \addcontentsline{toc}{section}{\listoflistingscaption}
+  \listof{listing}{\listoflistingscaption}
+}
 
 \newcommand{\emptypage}[0]{
 	% Empty Page
@@ -176,11 +185,11 @@ entail serious consequences. These include the following:
 2. I will not be given credit for the course.
 3. The Honor Board may review my paper and suggest additional sanctions, including
 expulsion.
-Furthermore I am aware that submitting the same or a revised paper in two separate courses without
+Furthermore, I am aware that submitting the same or a revised paper in two separate courses without
 the instructors' explicit consent will result in similar consequences.\cite{Antiplagiatserklrung}
 \vspace*{50pt}
 
-Freiberg, den \today \hspace{2cm} \underline{\phantom{Platz für die Unterschrift}}
+Freiberg, \today \hspace{2cm} \underline{\phantom{Platz für die Unterschrift}}
 \clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% </Antiplagiatserklärung> %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -195,10 +204,10 @@ Freiberg, den \today \hspace{2cm} \underline{\phantom{Platz für die Unterschrif
 
 % Mein Dank geht auch an die fleißigen Korrekturleser Friederike Klos \index{Klos, Friederike} und Felix Kästner \index{Kästner, Felix}.
 
-Thanks!
+% Thanks!
 
 \begin{figure}[htbp]
-	\includegraphics[width=6cm]{../assets/my-little-pony-mlp-other-261396.jpeg}
+	\includegraphics[width=\textwidth]{../assets/my-little-pony-mlp-other-261396.jpeg}
 \end{figure}
 
 % section danksagung (end)
@@ -230,6 +239,9 @@ Thanks!
 
 \clearpage
 \listoffigures
+
+\clearpage
+\listoflistings
 
 % References (Literaturverzeichnis):
 % a) Style (with abbreviations: use alpha):
