--- a/latex/implementation.tex
+++ b/latex/implementation.tex
@@ -32,7 +32,7 @@ AngularJS is used for:
 
 \begin{itemize*}
   \item bootstrapping the application,
-  \item modularisation,
+  \item modularization,
   \item dependency management,
   \item resource management,
   \item routing and
@@ -46,8 +46,8 @@ Listing \ref{list:bootstrap} initializes an SceGraToo. In the \texttt{config}
 function routes are defined. When a link is clicked the browser will not make a
 request to the server and load that page instead a new controller takes over and
 renders a different templates. The advantage of this approach is that the user
-sees imediate feedback while navigating. The application can render the view and
-react to user input while its still waiting for some requested ressources from
+sees immediate feedback while navigating. The application can render the view and
+react to user input while its still waiting for some requested resources from
 the server (like a list of all available projects). This approach is called
 single-page application \cite{Mikowski:2013:SPW:2663433}.
 
@@ -73,7 +73,7 @@ window.angular.module('scegratooApp')
       })
   })
   \end{minted}
-  \caption{This is how SceGraToo is initialiezed. It also shows how the routing is defined.}
+  \caption{This is how SceGraToo is initialized. It also shows how the routing is defined.}
   \label{list:bootstrap}
 \end{listing}
 
@@ -82,10 +82,10 @@ window.angular.module('scegratooApp')
 
 Each controller, view or service is contained in its own module and does not
 pollute the global name space. In a browser's javascript context the global
-namespace refers to the namespace that belongs to the \texttt{window} object.
+name space refers to the name space that belongs to the \texttt{window} object.
 Defining variables in scripts defines this variable on the window object.
 Angular modules prevent this. Modules are registered on a specific angular
-application (thus one website could also accomodate multiple angular
+application (thus one website could also accommodate multiple angular
 applications). The defined variables are contained by creating function that
 returns whatever the module is supposed to contain, thus creating a closure.
 Listing \ref{list:angularmodule} shows a module that creates a WeakMap and
@@ -156,19 +156,19 @@ retrieved from the server.
 React is utilized by SceGraToo to render the tree-view that gives a more
 structured view of the scene-graph than the rendered scene does.
 
-React works by creating compoents and nesting them. Listing
+React works by creating components and nesting them. Listing
 \ref{list:reactcomponent} shows the \texttt{TreeView} component. The
 \texttt{TreeNode} is another component that handles a specific tree-view-node,
 components keep instantiating and returning components until the whole
 scene-graph is traversed. In listing \ref{list:reactentrypoint} it is shown how
 it is rendered to the DOM. The html syntax is simply syntactic sugar and is
-tanspiled into normal javascript before being evaluated (the transpiled
-equivalent of listin \ref{list:reactentrypoint} is shown in listing
+transpiled into normal javascript before being evaluated (the transpiled
+equivalent of listing \ref{list:reactentrypoint} is shown in listing
 \ref{list:reacttranspiled}).
 
 Using react the view virtually becomes a function of its input. The input is the root node of the scene-graph, the x3d node.
 
-The parsing and rendering proces can be described as follows:
+The parsing and rendering process can be described as follows:
 \begin{enumerate*}
   \item Choose a graph node as the root
   \item call the node component with that graph node,
@@ -230,12 +230,12 @@ Synchronizing the tree-view when the scene-graph changes is done by calling
 calculates the changes that need to be done to update the DOM and applies these.
 
 If the tree-view changes the scene-graph, the same thing happens. Listing
-\ref{list:checkbox} show a checkbox component. It receives an property called
-\texttt{owner}. That is a scene-graph node. Nodes in x3dom hav the render
+\ref{list:checkbox} show a check box component. It receives an property called
+\texttt{owner}. That is a scene-graph node. Nodes in x3dom have the render
 property. If the property is true, that node and all its children are rendered,
 if not, they are not visible. The component is showing the state of the the
-\texttt{owner}'s render property's state. When the user clicks that checkbox the
-\texttt{owner}'s attribute is changed. The compnent does not have to update the
+\texttt{owner}'s render property's state. When the user clicks that check box the
+\texttt{owner}'s attribute is changed. The component does not have to update the
 DOM node, react is doing it the next time \texttt{React.render} is called. This
 is a simple example but the concept holds up for more complicated interactions
 like adding new nodes or moving via drag 'n drop.
