fix dots in biblio

--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,22 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-12 01:18:20 +0200
+%% Created for kietsy at 2015-08-12 18:39:50 +0200 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
 
 @webpage{diff,
 	Date-Added = {2015-08-11 19:11:52 +0000},
 	Date-Modified = {2015-08-11 19:11:57 +0000},
-	Url = {https://en.wikipedia.org/wiki/Diff_utility}}
+	Url = {https://en.wikipedia.org/wiki/Diff_utility},
+	Bdsk-Url-1 = {https://en.wikipedia.org/wiki/Diff_utility}}
 
 @webpage{3dmeteor,
 	Date-Added = {2015-08-11 18:57:51 +0000},
 	Date-Modified = {2015-08-11 18:57:56 +0000},
-	Url = {http://3d.meteor.com/}}
+	Url = {http://3d.meteor.com/},
+	Bdsk-Url-1 = {http://3d.meteor.com/}}
 
 @webpage{x3d,
 	Date-Added = {2015-08-11 17:27:30 +0000},
@@ -237,21 +239,19 @@
 	Year = {2015},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s00450-014-0256-x}}
 
-	@book{Mikowski:2013:SPW:2663433,
-	 author = {Mikowski, Michael and Powell, Josh},
-	 title = {Single Page Web Applications: JavaScript End-to-end},
-	 year = {2013},
-	 isbn = {1617290750, 9781617290756},
-	 edition = {1st},
-	 publisher = {Manning Publications Co.},
-	 address = {Greenwich, CT, USA},
-	}
+@book{Mikowski:2013:SPW:2663433,
+	Address = {Greenwich, CT, USA},
+	Author = {Mikowski, Michael and Powell, Josh},
+	Edition = {1st},
+	Isbn = {1617290750, 9781617290756},
+	Publisher = {Manning Publications Co.},
+	Title = {Single Page Web Applications: JavaScript End-to-end},
+	Year = {2013}}
 
-	@book{Vanston:2013:AD:2566740,
-	 author = {Vanston, Alex},
-	 title = {AngularJS Directives},
-	 year = {2013},
-	 isbn = {1783280336, 9781783280339},
-	 edition = {1st},
-	 publisher = {Packt Publishing},
-	} 
+@book{Vanston:2013:AD:2566740,
+	Author = {Vanston, Alex},
+	Edition = {1st},
+	Isbn = {1783280336, 9781783280339},
+	Publisher = {Packt Publishing},
+	Title = {AngularJS Directives},
+	Year = {2013}}
